 * Changed Mesh to not derive from DomainImplementation
 * Deprecated Mesh::computeSimplexVolume, use Mesh::computeSimplicesVolume instead
 * Deprecated Mesh,Interval::computeVolume
 * Deprecated FunctionalChaosRandomVector::getSobol* methods in favor of FunctionalChaosSensitivity ones

=== Python module ===

=== Miscellaneous ===
 * Multivariate TruncatedDistribution
 * Asymptotic Sobol' variance estimators

=== Bug fixes ===
 * #870 (Problem with TensorizedCovarianceModel with spatial dim > 1)
 * #926 (Covariance model active parameter set behavior)
 * #928 (Covariance model/ Field/Process properties naming)
 * #932 (Optim algo iteration/evaluation number)
 * #933 (Compilation failed when Muparser is missing)
 * #937 (Small bugs in FunctionalChaosResult::get{Residuals, RelativeErrors})
 * #938 (DistributionFactory::buildEstimator to handle Exception)
 * #939 (The help of the getMaximumDegreeStrataIndex method is wrong.)
 * #941 (Duplicate with SobolIndicesExperiment)

== 1.10 release (2017-11-13) == #release-1.10

=== Library ===

==== Major changes ====
 * It is now possible to define numerical model acting on either Point or Field
   to produce either Point or Field.
   The Python binding has been extended to allow the user to define such
   functions based on either a Python function or a Python class.
   All the possible compositions have been implemented.

==== New classes ====
 * ProbabilitySimulation
 * SobolIndicesExperiment
 * VertexFunction
 * FieldToPointFunction
 * FieldToPointFunctionImplementation
 * PythonFieldToPointFunction
 * OpenTURNSPythonFieldToPointFunction
 * PointToFieldFunction
 * PointToFieldFunctionImplementation
 * PythonPointToFieldFunction
 * OpenTURNSPythonPointToFieldFunction
 * KarhunenLoeveLifting
 * KarhunenLoeveProjection
 * PointToPointEvaluation
 * PointToPointConnection
 * PointToFieldConnection
 * FieldToFieldConnection
 * FieldToPointConnection

==== API changes ====
 * Removed deprecated LAR class