@@ -15,3 +15,6 @@ Remove deprecated Domain,DomainImplementation::getLowerBound, getUpperBound in 1
 Remove deprecated SobolIndicesAlgorithm::[sg]etBootstrapConfidenceLevel in 1.12
 Remove deprecated Mesh::getVerticesToSimplicesMap,computeSimplexVolume in 1.12
 Remove deprecated FunctionalChaosRandomVector::getSobol* in 1.13
+Remove deprecated Evaluation,EvaluationImplementation,EvaluationProxy,Function,FunctionImplementation,ParametricEvaluation::operator(inP,parameter) in 1.12
+Remove deprecated Gradient,GradientImplementation,ParametricGradient::gradient(inP,parameter) in 1.12
+Remove deprecated Hessian,HessianImplementation,ParametricHessian::operator(inP,parameter) in 1.12
