@@ -89,6 +89,7 @@ SymmetricTensor HessianImplementation::hessian(const Point & inP) const
 SymmetricTensor HessianImplementation::hessian(const Point & inP,
     const Point & parameters)
 {
+  LOGWARN("HessianImplementation::gradient(inP,parameters) is deprecated, use setParameter(parameters) and hessian(inP)");
   setParameter(parameters);
   return hessian(inP);
 }
