@@ -56,6 +56,8 @@ public:
   /** Gradient operator */
   using GradientImplementation::gradient;
   Matrix gradient(const Point & point) const;
+
+  /* @deprecated */
   Matrix gradient(const Point & point,
                   const Point & parameters) const;
 
