@@ -57,6 +57,8 @@ public:
   /** Hessian operator */
   using HessianImplementation::hessian;
   SymmetricTensor hessian(const Point & point) const;
+
+  /* @deprecated */
   SymmetricTensor hessian(const Point & point,
                           const Point & parameters) const;
 
